# modular-glsl

./: .gitignore  CMakeLists.txt  README.md
examples/watcher/: .fuse_hidden00000fc300000024  Makefile  watcher.cpp
examples/watcher/shaders/: glslmodules  main.glsl  mock1.glsl  mock2.glsl  mock3.glsl  mock4.glsl
header-only/: modular-glsl.h
src/: ShaderBuilder.cpp  main.cpp  modular-glsl.cpp
test/: test.cpp
